# HPC

./: README.md
Parcial 3/Modelo C++/: CMakeLists.txt  main.cpp
Parcial 3/Modelo C++/CARPETA-1/: regresionlineal.cpp  regresionlineal.h
Parcial 3/Modelo C++/CARPETA-2/: extractiondata.cpp  extractiondata.h
Parcial 3/Modelo Python/: Parcial_3.ipynb
ParcialPrimerCorte/: CMakeCache.txt  CMakeLists.txt  ParcialPrimerCorte.cbp  cmake_install.cmake  main.cpp
ParcialPrimerCorte/.cmake/api/v1/reply/: cache-v2-9786031f434763661fc5.json  cmakeFiles-v1-c18dd5f04f68eac343be.json  codemodel-v2-fd75b4a508affb2d6f6d.json  index-2022-03-13T04-50-58-0029.json
ParcialPrimerCorte/Debug/: CMakeCache.txt  ParcialPrimerCorte  ParcialPrimerCorte.cbp  cmake_install.cmake
ParcialPrimerCorte/Debug/.cmake/api/v1/reply/: cache-v2-dec0107b504ed35a601f.json  cmakeFiles-v1-e9d52146d55192490eb7.json  codemodel-v2-c0ae689f6ce2a8b8a34e.json  index-2022-03-13T02-48-17-0664.json  target-ParcialPrimerCorte-Debug-0ef97576e1b5333102b9.json
ParcialPrimerCorte/Functions/: functions.cpp  functions.h
