cmake_minimum_required(VERSION 3.5)

project(ModeloLR LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

#Variable de fuente
set(project_sources
    main.cpp
    regresionlineal.cpp
    EXTRACTION/extractiondata.cpp
    )

#Variable de interfaces
set(project_headers
    regresionlineal.h
    EXTRACTION/extractiondata.h
    )

#Ejecutables
add_executable(${PROJECT_NAME}
               ${project_sources}
               ${project_headers}
               )
